--- a/Website/index.html
+++ b/Website/index.html
@@ -38,7 +38,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1><a href="https://finnvian.github.io/Green-Screen-by-Finnvian/">Green Screen Resource Pack - Finnvian</a></h1>
+      <h1><a href="https://github.com/Finnvian/Green-Screen-by-Finnvian">Green Screen Resource Pack - Finnvian</a></h1>
       
 
       <h1 id="green-screen-by-finnvian">Green Screen by Finnvian</h1>
