--- a/Website/index.html
+++ b/Website/index.html
@@ -38,10 +38,10 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1><a href="https://github.com/Finnvian/Green-Screen-by-Finnvian">Green Screen Resource Pack - Finnvian</a></h1>
+      <h1>Green Screen Resource Pack - Finnvian</h1>
       
 
-      <h1 id="green-screen-by-finnvian">Green Screen by Finnvian</h1>
+      <h1><a href="https://github.com/Finnvian/Green-Screen-by-Finnvian">Green Screen by Finnvian</a></h1>
 <p>Green Screen let’s you use 4 light emitting colored blocks to be used as a uniform background. This resource pack uses the 3 Froglights and the Jack o’Lantern and recolors these blocks to (Red: #FF0000), (Green: #00FF00), (Blue: #0000FF) and (Pink: #FF00FF). With this Minecraft resource pack, you can take images or videos of a subject and easily remove the background in a editing software.</p>
 
 <p align="center">
